# altv-mono-module

./: .gitignore  .gitlab-ci.yml  MonoOrange.sln  OrangeDotNET.sln  Package.nuspec  README.md  SharpOrange.nuspec  build.bat  build.sh  mono-module.sln
CppSharpOrange/: CppSharpOrange.csproj  Program.cs
CppSharpOrange/Properties/: AssemblyInfo.cs
MonoOrange/: API.h  Binds.cpp  CMakeLists.txt  CVector3.h  Enums.h  Mono.cpp  Mono.h  MonoOrange.cpp  MonoOrange.filters  MonoOrange.vcxproj  MonoOrange.vcxproj.filters  stdafx.h
OrangeDotNET/: Main.cs  OrangeDotNET.csproj  OrangeDotNET.sln
OrangeDotNET-Module/: API.h  Mono.cpp  Mono.h  OrangeDotNET-Module.filters  OrangeDotNET-Module.vcxproj  OrangeDotNET-Module.vcxproj.filters  OrangeDotNET.cpp  OrangeDotNET.h  OrangeDotNET.i  OrangeDotNETModule.i  OrangeDotNETModule_wrap.cxx  stdafx.h
OrangeDotNET-Mono/: API.h  CVector3.h  Mono.cpp  Mono.h  OrangeDotNET-Mono.vcxproj  OrangeDotNET-Mono.vcxproj.filters
OrangeDotNET/API/: API.cs  APIBase.cs  CVector3.cs  MArray.cs  MValue.cs  OrangeDotNETModule.cs  OrangeDotNETModulePINVOKE.cs  OrangeDotNETMono.cs  (+3 more)
Server/: .gitignore  config.yml
SharpOrange/: API.cs  Client.cs  Event.cs  Events.cs  Main.cs  Orange.cs  Plugin.cs  Resource.cs  Server.cs  SharpOrange.cs  SharpOrange.csproj  Std.cs
mono-module/: CMakeLists.txt  Export.h  Mono.cpp  Mono.h  mono-module.cpp  mono-module.filters  mono-module.h  mono-module.vcxproj  mono-module.vcxproj.filters  stdafx.h
mono-module/API/: API.h  APIExports.cpp  APIExports.h  CPPSAPI.h  CVector3.h
mono-module/Mono/: Mono.cpp  Mono.h
(+138 files in other folders)
